<resources>
    <string name="app_name">Projekat</string>
    <string name="Login">Login</string>

    <string name="Register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="SignIn">Sign In</string>

    <!-- Activity 2 -->
    <string name="Welcome">Welcome</string>
    <string name="NewLs">New List</string>
    <string name="SeeMyLs">See my lists</string>
    <string name="ListName">List Title</string>
    <string name="save">SAVE</string>
    <string name="share_list">Share list</string>
    <string name="shared">Shared</string>

    <!-- Strings -->


</resources>