<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation = "vertical"
    tools:context=".LoginFragment">


    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="@string/Username" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:hint="@string/Password"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/Login"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:padding="5dp"
        android:textColor="@color/white"
        android:background="@color/purple_700">

    </Button>


</LinearLayout>